<resources>
    <string name="app_name">RecipeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Usename</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="check_your_network">Check your network connection</string>
    <string name="version">Version</string>
    <string name="recipe">Recipe</string>
    <string name="search">Search</string>
    <string name="lucky">Lucky</string>
    <string name="favorite">Favourite</string>
    <string name="recent_recipes">Recent Recipes</string>
    <string name="hello">Hello</string>
    <string name="lets_cook_something_delicious">Lets Cook Something Delicious Today</string>
    <string name="vegan">Vegan</string>
    <string name="meal_types">Meal Types</string>
    <string name="diet_types">Diet Types</string>
    <string name="submit">Submit</string>
</resources>