<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.RegisterFragment">
    <!--Scroll-->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/registerBtn"
        app:layout_constraintEnd_toEndOf="@id/registerBtn"
        app:layout_constraintStart_toStartOf="@id/registerBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="@dimen/_10mdp">
        <!--Container-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20mdp"
            android:orientation="vertical">
            <!--Cover-->
            <ImageView
                android:id="@+id/coverImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="@dimen/_20mdp"
                tools:src="@drawable/register_logo"/>
            <!--Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTxtLay"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--Last name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTxtLay"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--Username-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTxtLay"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/ic_round_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTxtLay"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_round_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>
    <!--Register-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        style="@style/MaterialButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40mdp"
        android:layout_margin="@dimen/_15mdp"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>